[tool.poetry]
name = "tarot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.73.0"
psycopg = {extras = ["binary", "pool"], version = "^3.0.8"}
uvicorn = {extras = ["standard"], version = "^0.17.1"}
requests = "^2.27.1"
toolz = "^0.11.2"


[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.3.3"}
future = "^0.18.2"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pylsp-mypy = "^0.5.7"
python-lsp-black = "^1.0.1"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.8"
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"
httpx = "^0.22.0"
anyio = "^3.5.0"
trio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
